# Phytech-OJT-2025

./: .gitignore  README.md
Basics of C language/: ATM.c  ArrayHighesttoLowest.c  ArrayLowestToHighest.c  Calculato.c  Circle.c  Circle.i  Circle.s  Compare.c  DecToBin.c  Distance.c  File1.c  File1.txt  PascalTriangle  PascalTriangle.c  Patter1.c  RecParameter.c  SecodnMinMax.c  SortandREV.c  a.out  add2array.c  compBitwise.c  compoundIntrest.c  countFile.c  data.txt  even.txt  everOddandPrime.c  extern  extern1.c  extern1.h  extern2.c  fileToFile.c  marks.c  mergearray.c  months.c  naturalnumber.c  odd.txt  oddnumbers.c  operations.c  password.c  passwordFile.c  (+16 more)
Basics of C language/Class Attendance System/: CMakeLists.txt  attendance.c  attendance.h  main.c  report.c  report.h  student.c  student.h  utils.c  utils.h
Device_Drivers/Hello/: ..module-common.o.cmd  .hello_driver.ko.cmd  .hello_driver.mod.cmd  .hello_driver.mod.o.cmd  .hello_driver.o.cmd  .modules.order.cmd  hello_driver.c  hello_driver.ko  hello_driver.mod  hello_driver.mod.c  modules.order
Embedded/16x02_LCD/: .cproject  .mxproject  .project  HAL_Interrupt.ioc  platformio.ini
Embedded/ADC_DMA/: .cproject  .mxproject  ADC_DMA.ioc
Embedded/ADC_Read/: .cproject  .project  ADC_Read.ioc
Embedded/DAC_Function/: .cproject  .project  DAC_Function.ioc
Embedded/DHT22/: .cproject  .mxproject  .project  DHT22.ioc
Embedded/Freq_Counter/: .cproject  .mxproject  .project  Freq_Counter.ioc
Linux Internals/: a.out  exec1.c  fork1.c  fork2.c  fork3.c  fork4.c  orphan.c  sys1.c  sys2.c  sys3.c
(+134 files in other folders)
